--- a/app/src/main/res/layout/item_event.xml
+++ b/app/src/main/res/layout/item_event.xml
@@ -6,15 +6,15 @@
     android:id="@+id/main_item_card"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="@dimen/main_rv_margin_8dp"
-    android:layout_marginRight="@dimen/main_rv_margin_8dp"
-    android:layout_marginBottom="@dimen/main_item_component_margin_16dp"
-    app:cardCornerRadius="@dimen/main_item_card_radius_8dp">
+    android:layout_marginLeft="@dimen/margin_8dp"
+    android:layout_marginRight="@dimen/margin_8dp"
+    android:layout_marginBottom="@dimen/margin_16dp"
+    app:cardCornerRadius="@dimen/margin_8dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="@dimen/main_item_component_margin_16dp"
+        android:paddingBottom="@dimen/margin_16dp"
         android:orientation="vertical">
 
         <ImageView
@@ -28,12 +28,12 @@
             android:id="@+id/tv_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/main_item_component_margin_16dp"
-            android:layout_marginLeft="@dimen/main_item_component_margin_16dp"
-            android:layout_marginRight="@dimen/main_item_component_margin_16dp"
-            android:layout_marginBottom="@dimen/main_item_component_margin_8dp"
+            android:layout_marginTop="@dimen/margin_16dp"
+            android:layout_marginLeft="@dimen/margin_16dp"
+            android:layout_marginRight="@dimen/margin_16dp"
+            android:layout_marginBottom="@dimen/margin_8dp"
             android:textColor="@color/colorTvBlack"
-            android:textSize="@dimen/main_item_title_size_16sp"
+            android:textSize="@dimen/text_size_16sp"
             android:textStyle="bold"
             android:textAllCaps="true"
             tools:text="Музыкальный фестиваль LiveFest Summer" />
@@ -42,20 +42,20 @@
             android:id="@+id/tv_details"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/main_item_component_margin_16dp"
-            android:layout_marginRight="@dimen/main_item_component_margin_16dp"
+            android:layout_marginLeft="@dimen/margin_16dp"
+            android:layout_marginRight="@dimen/margin_16dp"
             android:textColor="@color/colorTvBlack"
-            tools:text="@string/item_details"/>
+            tools:text="Первый фестиваль LiveFest на курорте «Роза Хутор» собрал перспективные музыкальные проекты России и произвёл фурор у публики. Летняя версия будет ещё жарче и динамичнее, охватит ещё больше жанров, откроет новые имена и порадует свежими треками от признанных звёзд."/>
 
         <TextView
             android:id="@+id/tv_location"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/main_item_component_margin_16dp"
-            android:layout_marginRight="@dimen/main_item_component_margin_16dp"
-            android:layout_marginTop="@dimen/main_item_component_margin_8dp"
+            android:layout_marginLeft="@dimen/margin_16dp"
+            android:layout_marginRight="@dimen/margin_16dp"
+            android:layout_marginTop="@dimen/margin_8dp"
             android:paddingStart="4dp"
-            tools:text="@string/item_info_location"
+            tools:text="ЦПКиО им. Горького"
             android:drawableStart="@drawable/ic_location"
             android:drawablePadding="16dp"
             style="@style/TextInfo"/>
@@ -64,26 +64,26 @@
             android:id="@+id/tv_date"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/main_item_component_margin_16dp"
-            android:layout_marginRight="@dimen/main_item_component_margin_16dp"
-            android:layout_marginTop="@dimen/main_item_component_margin_8dp"
+            android:layout_marginLeft="@dimen/margin_16dp"
+            android:layout_marginRight="@dimen/margin_16dp"
+            android:layout_marginTop="@dimen/margin_8dp"
             android:paddingStart="4dp"
             android:drawableStart="@drawable/ic_date"
             android:drawablePadding="12dp"
-            tools:text="@string/item_info_date"
+            tools:text="10-11 августа"
             style="@style/TextInfo"/>
 
         <TextView
             android:id="@+id/tv_price"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/main_item_component_margin_16dp"
-            android:layout_marginRight="@dimen/main_item_component_margin_16dp"
-            android:layout_marginTop="@dimen/main_item_component_margin_8dp"
+            android:layout_marginLeft="@dimen/margin_16dp"
+            android:layout_marginRight="@dimen/margin_16dp"
+            android:layout_marginTop="@dimen/margin_8dp"
             android:paddingStart="4dp"
             android:drawableStart="@drawable/ic_ruble"
             android:drawablePadding="18dp"
-            tools:text="@string/item_info_price"
+            tools:text="1 200 - 1 500 Р"
             style="@style/TextInfo"/>
 
     </LinearLayout>
