--- a/app/src/main/res/layout/toolbar_details.xml
+++ b/app/src/main/res/layout/toolbar_details.xml
@@ -10,9 +10,9 @@
     <ImageButton
         android:id="@+id/btn_back_details"
         android:layout_width="@dimen/details_btn_back_width_48dp"
-        android:layout_height="@dimen/details_btn_back_height_32dp"
-        android:layout_marginTop="@dimen/details_component_margin_14dp"
-        android:layout_marginLeft="@dimen/details_component_margin_8dp"
+        android:layout_height="@dimen/margin_32dp"
+        android:layout_marginTop="@dimen/margin_16dp"
+        android:layout_marginLeft="@dimen/margin_8dp"
         android:background="@drawable/details_toolbar_btn_rounded"
         app:srcCompat="@drawable/ic_arrow_back"/>
 
