--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,8 +10,8 @@
 
     <style name="TextInfo">
         <item name="android:textColor">@color/colorTvInfoGrey</item>
-        <item name="android:layout_marginLeft">@dimen/main_item_component_margin_8dp</item>
-        <item name="android:textSize">@dimen/main_item_info_size_14sp</item>
+        <item name="android:layout_marginLeft">@dimen/margin_8dp</item>
+        <item name="android:textSize">@dimen/text_size_14sp</item>
         <item name="android:layout_gravity">center_vertical</item>
     </style>
 
