Fix dimens usage

--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -94,7 +94,7 @@
                         android:paddingStart="4dp"
                         tools:text="ЦКПО им. Горького"
                         android:drawableStart="@drawable/ic_location"
-                        android:drawablePadding="16dp"
+                        android:drawablePadding="@dimen/margin_16dp"
                         style="@style/TextInfo"/>
 
                     <TextView
@@ -104,9 +104,9 @@
                         android:layout_marginLeft="@dimen/margin_16dp"
                         android:layout_marginRight="@dimen/margin_16dp"
                         android:layout_marginBottom="@dimen/margin_8dp"
-                        android:paddingStart="4dp"
+                        android:paddingStart="@dimen/margin_4dp"
                         android:drawableStart="@drawable/ic_date"
-                        android:drawablePadding="12dp"
+                        android:drawablePadding="@dimen/margin_12dp"
                         tools:text="10-11 августа"
                         style="@style/TextInfo"/>
 
@@ -117,9 +117,9 @@
                         android:layout_marginLeft="@dimen/margin_16dp"
                         android:layout_marginRight="@dimen/margin_16dp"
                         android:layout_marginBottom="@dimen/margin_16dp"
-                        android:paddingStart="4dp"
+                        android:paddingStart="@dimen/margin_4dp"
                         android:drawableStart="@drawable/ic_ruble"
-                        android:drawablePadding="18dp"
+                        android:drawablePadding="@dimen/margin_18dp"
                         tools:text="1200 - 1500 Р"
                         style="@style/TextInfo"/>
                 </LinearLayout>
